compiler/generated/xmllangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\User\source\repos\xmllang\xmllang.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace xmllang {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class xmllangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, FOR=3, IF=4, IN=5, TAG=6, ELSE=7, ATTR=8, NAME=9, TEXT=10, 
		NODES=11, ATTRS=12, GEN=13, PRINT=14, VALUE=15, PARSE=16, ARRAY=17, SWITCH=18, 
		CASE=19, DEFAULT=20, AT=21, ID=22, FILENAME=23, STRING=24, NEWLINE=25, 
		ASSIGN=26, EQ=27, NOT=28, APPEND_ATTR=29, APPEND_CHILD=30, REMOVE_ATTR=31, 
		REMOVE_CHILD=32, ROOT=33, INT=34, QT=35, COLON=36, OPEN_BRACKET=37, CLOSE_BRACKET=38, 
		SPACE=39, COMMA=40, ARROW=41, DOT=42, OPEN_BLOCK=43, CLOSE_BLOCK=44;
	public const int
		RULE_tale = 0, RULE_function_declaration = 1, RULE_empty_stat = 2, RULE_statement = 3, 
		RULE_access_info = 4, RULE_primitive_value = 5, RULE_value = 6, RULE_case_block = 7, 
		RULE_print_statement = 8, RULE_begin_for = 9, RULE_end = 10, RULE_datatype = 11, 
		RULE_primitive = 12, RULE_function_decl = 13, RULE_function_args = 14, 
		RULE_begin_if = 15, RULE_comparison = 16, RULE_else_thing = 17, RULE_switch_stat = 18;
	public static readonly string[] ruleNames = {
		"tale", "function_declaration", "empty_stat", "statement", "access_info", 
		"primitive_value", "value", "case_block", "print_statement", "begin_for", 
		"end", "datatype", "primitive", "function_decl", "function_args", "begin_if", 
		"comparison", "else_thing", "switch_stat"
	};

	private static readonly string[] _LiteralNames = {
		null, "'int'", "'string'", "'for each'", "'if'", "'in'", "'node'", "'else'", 
		"'attr'", "'name'", "'text'", "'nodes'", "'attrs'", "'generate'", "'print'", 
		"'value'", "'parse'", "'array'", "'switch'", "'case'", "'default'", "'@'", 
		null, null, null, null, "'='", "'=='", "'!='", "'adds attr'", "'adds child'", 
		"'removes attr'", "'removes child'", "'!'", null, "'\"'", "':'", "'('", 
		"')'", null, "','", "'->'", "'.'", "'{'", "'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "FOR", "IF", "IN", "TAG", "ELSE", "ATTR", "NAME", "TEXT", 
		"NODES", "ATTRS", "GEN", "PRINT", "VALUE", "PARSE", "ARRAY", "SWITCH", 
		"CASE", "DEFAULT", "AT", "ID", "FILENAME", "STRING", "NEWLINE", "ASSIGN", 
		"EQ", "NOT", "APPEND_ATTR", "APPEND_CHILD", "REMOVE_ATTR", "REMOVE_CHILD", 
		"ROOT", "INT", "QT", "COLON", "OPEN_BRACKET", "CLOSE_BRACKET", "SPACE", 
		"COMMA", "ARROW", "DOT", "OPEN_BLOCK", "CLOSE_BLOCK"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "xmllang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static xmllangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public xmllangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public xmllangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class TaleContext : ParserRuleContext {
		public Function_declarationContext[] function_declaration() {
			return GetRuleContexts<Function_declarationContext>();
		}
		public Function_declarationContext function_declaration(int i) {
			return GetRuleContext<Function_declarationContext>(i);
		}
		public TaleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tale; } }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterTale(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitTale(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTale(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TaleContext tale() {
		TaleContext _localctx = new TaleContext(Context, State);
		EnterRule(_localctx, 0, RULE_tale);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 38; function_declaration();
				}
				}
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ID || _la==SPACE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_declarationContext : ParserRuleContext {
		public Function_declContext function_decl() {
			return GetRuleContext<Function_declContext>(0);
		}
		public EndContext end() {
			return GetRuleContext<EndContext>(0);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public Empty_statContext[] empty_stat() {
			return GetRuleContexts<Empty_statContext>();
		}
		public Empty_statContext empty_stat(int i) {
			return GetRuleContext<Empty_statContext>(i);
		}
		public Function_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterFunction_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitFunction_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_declarationContext function_declaration() {
		Function_declarationContext _localctx = new Function_declarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_function_declaration);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 43; function_decl();
			State = 45;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 44; statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 47;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 49; end();
			State = 53;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 50; empty_stat();
					}
					} 
				}
				State = 55;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Empty_statContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(xmllangParser.NEWLINE, 0); }
		public ITerminalNode SPACE() { return GetToken(xmllangParser.SPACE, 0); }
		public Empty_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_empty_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterEmpty_stat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitEmpty_stat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmpty_stat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Empty_statContext empty_stat() {
		Empty_statContext _localctx = new Empty_statContext(Context, State);
		EnterRule(_localctx, 4, RULE_empty_stat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			_la = TokenStream.LA(1);
			if ( !(_la==NEWLINE || _la==SPACE) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Assign_new_valueContext : StatementContext {
		public Access_infoContext access_info() {
			return GetRuleContext<Access_infoContext>(0);
		}
		public ITerminalNode[] SPACE() { return GetTokens(xmllangParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(xmllangParser.SPACE, i);
		}
		public ITerminalNode ASSIGN() { return GetToken(xmllangParser.ASSIGN, 0); }
		public ITerminalNode STRING() { return GetToken(xmllangParser.STRING, 0); }
		public ITerminalNode NEWLINE() { return GetToken(xmllangParser.NEWLINE, 0); }
		public Assign_new_valueContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterAssign_new_value(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitAssign_new_value(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssign_new_value(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Gen_fileContext : StatementContext {
		public ITerminalNode GEN() { return GetToken(xmllangParser.GEN, 0); }
		public ITerminalNode OPEN_BRACKET() { return GetToken(xmllangParser.OPEN_BRACKET, 0); }
		public ITerminalNode ID() { return GetToken(xmllangParser.ID, 0); }
		public ITerminalNode COMMA() { return GetToken(xmllangParser.COMMA, 0); }
		public ITerminalNode[] SPACE() { return GetTokens(xmllangParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(xmllangParser.SPACE, i);
		}
		public ITerminalNode STRING() { return GetToken(xmllangParser.STRING, 0); }
		public ITerminalNode CLOSE_BRACKET() { return GetToken(xmllangParser.CLOSE_BRACKET, 0); }
		public ITerminalNode NEWLINE() { return GetToken(xmllangParser.NEWLINE, 0); }
		public Gen_fileContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterGen_file(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitGen_file(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGen_file(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class For_cycleContext : StatementContext {
		public Begin_forContext begin_for() {
			return GetRuleContext<Begin_forContext>(0);
		}
		public EndContext end() {
			return GetRuleContext<EndContext>(0);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public For_cycleContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterFor_cycle(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitFor_cycle(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFor_cycle(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Function_callContext : StatementContext {
		public ITerminalNode[] ID() { return GetTokens(xmllangParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(xmllangParser.ID, i);
		}
		public ITerminalNode OPEN_BRACKET() { return GetToken(xmllangParser.OPEN_BRACKET, 0); }
		public ITerminalNode CLOSE_BRACKET() { return GetToken(xmllangParser.CLOSE_BRACKET, 0); }
		public ITerminalNode NEWLINE() { return GetToken(xmllangParser.NEWLINE, 0); }
		public ITerminalNode[] COMMA() { return GetTokens(xmllangParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(xmllangParser.COMMA, i);
		}
		public ITerminalNode[] SPACE() { return GetTokens(xmllangParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(xmllangParser.SPACE, i);
		}
		public Function_callContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterFunction_call(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitFunction_call(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_call(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Declare_arrayContext : StatementContext {
		public ITerminalNode ARRAY() { return GetToken(xmllangParser.ARRAY, 0); }
		public ITerminalNode[] SPACE() { return GetTokens(xmllangParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(xmllangParser.SPACE, i);
		}
		public ITerminalNode ID() { return GetToken(xmllangParser.ID, 0); }
		public ITerminalNode NEWLINE() { return GetToken(xmllangParser.NEWLINE, 0); }
		public Declare_arrayContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterDeclare_array(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitDeclare_array(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclare_array(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class If_declarationContext : StatementContext {
		public Begin_ifContext begin_if() {
			return GetRuleContext<Begin_ifContext>(0);
		}
		public EndContext end() {
			return GetRuleContext<EndContext>(0);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public Else_thingContext else_thing() {
			return GetRuleContext<Else_thingContext>(0);
		}
		public If_declarationContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterIf_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitIf_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Parse_fileContext : StatementContext {
		public ITerminalNode PARSE() { return GetToken(xmllangParser.PARSE, 0); }
		public ITerminalNode OPEN_BRACKET() { return GetToken(xmllangParser.OPEN_BRACKET, 0); }
		public ITerminalNode ID() { return GetToken(xmllangParser.ID, 0); }
		public ITerminalNode COMMA() { return GetToken(xmllangParser.COMMA, 0); }
		public ITerminalNode[] SPACE() { return GetTokens(xmllangParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(xmllangParser.SPACE, i);
		}
		public ITerminalNode STRING() { return GetToken(xmllangParser.STRING, 0); }
		public ITerminalNode CLOSE_BRACKET() { return GetToken(xmllangParser.CLOSE_BRACKET, 0); }
		public ITerminalNode NEWLINE() { return GetToken(xmllangParser.NEWLINE, 0); }
		public Parse_fileContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterParse_file(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitParse_file(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParse_file(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PrintContext : StatementContext {
		public Print_statementContext print_statement() {
			return GetRuleContext<Print_statementContext>(0);
		}
		public PrintContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterPrint(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitPrint(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrint(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Append_tagContext : StatementContext {
		public ITerminalNode[] ID() { return GetTokens(xmllangParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(xmllangParser.ID, i);
		}
		public ITerminalNode[] SPACE() { return GetTokens(xmllangParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(xmllangParser.SPACE, i);
		}
		public ITerminalNode APPEND_CHILD() { return GetToken(xmllangParser.APPEND_CHILD, 0); }
		public ITerminalNode NEWLINE() { return GetToken(xmllangParser.NEWLINE, 0); }
		public Append_tagContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterAppend_tag(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitAppend_tag(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAppend_tag(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Primitive_assignmentContext : StatementContext {
		public PrimitiveContext primitive() {
			return GetRuleContext<PrimitiveContext>(0);
		}
		public ITerminalNode[] SPACE() { return GetTokens(xmllangParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(xmllangParser.SPACE, i);
		}
		public ITerminalNode ID() { return GetToken(xmllangParser.ID, 0); }
		public ITerminalNode ASSIGN() { return GetToken(xmllangParser.ASSIGN, 0); }
		public Primitive_valueContext primitive_value() {
			return GetRuleContext<Primitive_valueContext>(0);
		}
		public Primitive_assignmentContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterPrimitive_assignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitPrimitive_assignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrimitive_assignment(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Tag_assignmentContext : StatementContext {
		public ITerminalNode TAG() { return GetToken(xmllangParser.TAG, 0); }
		public ITerminalNode[] SPACE() { return GetTokens(xmllangParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(xmllangParser.SPACE, i);
		}
		public ITerminalNode ID() { return GetToken(xmllangParser.ID, 0); }
		public ITerminalNode OPEN_BRACKET() { return GetToken(xmllangParser.OPEN_BRACKET, 0); }
		public ITerminalNode STRING() { return GetToken(xmllangParser.STRING, 0); }
		public ITerminalNode CLOSE_BRACKET() { return GetToken(xmllangParser.CLOSE_BRACKET, 0); }
		public ITerminalNode NEWLINE() { return GetToken(xmllangParser.NEWLINE, 0); }
		public Tag_assignmentContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterTag_assignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitTag_assignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTag_assignment(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Append_atrContext : StatementContext {
		public ITerminalNode[] ID() { return GetTokens(xmllangParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(xmllangParser.ID, i);
		}
		public ITerminalNode[] SPACE() { return GetTokens(xmllangParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(xmllangParser.SPACE, i);
		}
		public ITerminalNode APPEND_ATTR() { return GetToken(xmllangParser.APPEND_ATTR, 0); }
		public ITerminalNode NEWLINE() { return GetToken(xmllangParser.NEWLINE, 0); }
		public Append_atrContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.EnterAppend_atr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IxmllangListener typedListener = listener as IxmllangListener;
			if (typedListener != null) typedListener.ExitAppend_atr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmllangVisitor<TResult> typedVisitor = visitor as IxmllangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAppend_atr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Remove_atrContext : StatementContext {
		public ITerminalNode[] ID() { return GetTokens(xmllangParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(xmllangParser.ID, i);
		}
		public ITerminalNode[] SPACE() { return GetTokens(xmllangParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(xmllangParser.SPACE, i);
		}
		public ITerminalNode REMOVE_ATTR() { return GetToken(xmllangParser.REMOVE_ATTR, 0); }
